http-service: update some fields name and type for create and get cluster (#5366)
